src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int16__abs_int16.snap
---
source: src/expr/src/scalar/func/impls/int16.rs
expression: "#[sqlfunc(sqlname = \"abs\")]\nfn abs_int16(a: i16) -> Result<i16, EvalError> {\n    a.checked_abs().ok_or_else(|| EvalError::Int16OutOfRange(a.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct AbsInt16;
impl crate::func::EagerUnaryFunc for AbsInt16 {
    type Input<'a> = i16;
    type Output<'a> = Result<i16, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        abs_int16(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for AbsInt16 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("abs")
    }
}
fn abs_int16(a: i16) -> Result<i16, EvalError> {
    a.checked_abs().ok_or_else(|| EvalError::Int16OutOfRange(a.to_string().into()))
}
