src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int16__cast_int16_to_uint32.snap
---
source: src/expr/src/scalar/func/impls/int16.rs
expression: "#[sqlfunc(\n    sqlname = \"smallint_to_uint4\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastUint32ToInt16),\n    is_monotone = true\n)]\nfn cast_int16_to_uint32(a: i16) -> Result<u32, EvalError> {\n    u32::try_from(a).or_else(|_| Err(EvalError::UInt32OutOfRange(a.to_string().into())))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastInt16ToUint32;
impl crate::func::EagerUnaryFunc for CastInt16ToUint32 {
    type Input<'a> = i16;
    type Output<'a> = Result<u32, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_int16_to_uint32(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastUint32ToInt16)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastInt16ToUint32 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("smallint_to_uint4")
    }
}
fn cast_int16_to_uint32(a: i16) -> Result<u32, EvalError> {
    u32::try_from(a).or_else(|_| Err(EvalError::UInt32OutOfRange(a.to_string().into())))
}
